Add crafting type system with provenance tracking
Implements core types for a tag-based crafting system:
- Item definitions with multi-component slots
- Recipes and constructions with tool/world object requirements
- Runtime item instances with quality and component tracking
- Provenance system for full crafting chain traceability
- Central registry for definitions and instances

--- a/subsystems/crafting/Cargo.toml
+++ b/subsystems/crafting/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "crafting"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+
+[lib]
+name = "crafting"
+path = "src/lib.rs"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
