Add GUI application for combat subsystem using macroquad
- Add macroquad 0.4 dependency (matching parent project)
- Create GUI binary (src/gui.rs) with visual combat interface
- Features: preset combatant selection, custom stats input, health bars,
  round-by-round execution, auto-play mode, combat history display
- Update README with GUI usage documentation

--- a/subsystems/combat/Cargo.toml
+++ b/subsystems/combat/Cargo.toml
@@ -11,4 +11,9 @@ path = "src/lib.rs"
 name = "combat"
 path = "src/main.rs"
 
+[[bin]]
+name = "combat-gui"
+path = "src/gui.rs"
+
 [dependencies]
+macroquad = "0.4"
