--- a/subsystems/mvp/Cargo.toml
+++ b/subsystems/mvp/Cargo.toml
@@ -18,3 +18,4 @@ axum = "0.7"
 tokio = { version = "1", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["fs", "cors"] }
+clap = { version = "4.5", features = ["derive"] }
