--- a/subsystems/mvp/Cargo.toml
+++ b/subsystems/mvp/Cargo.toml
@@ -19,3 +19,4 @@ tokio = { version = "1", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["fs", "cors"] }
 clap = { version = "4.5", features = ["derive"] }
+rand = "0.8"
